# PiDeCAF

./: README.md
au_uav_ros/: CMakeLists.txt  CMakeLists.txt.orig  package.xml
au_uav_ros/courses/: TT.course
au_uav_ros/include/au_uav_ros/: ForceField.h  Fsquared.h  ardu_talker.h  collisionAvoidance.h  collision_avoidance.h  collision_avoidance_logic.h  coordinator.h  gcs_talker.h  ipn.h  mavlink_read.h  mover.h  pi_standard_defs.h  plane.h  planeObject.h  serial_talker.h  simPlaneObject.h  standardDefs.h  standardFuncs.h  vmath.h  xbee_talker.h
au_uav_ros/include/mavlink/v1.0/: mavlink_helpers.h
au_uav_ros/include/mavlink/v1.0/common/: mavlink_msg_au_uav.h.save
au_uav_ros/launch/: PiDeCAF.launch  gcs.launch  launch.launch  xbee.launch
au_uav_ros/msg/: Command.msg
au_uav_ros/src/: ForceField.cpp  Fsquared.cpp  Fsquared.cpp.orig  ardu_talker.cpp  ardu_talker.cpp.orig  collisionAvoidance.cpp  collision_avoidance.cpp  collision_avoidance_logic.cpp  coordinator.cpp  gcs_talker.cpp  ipn.cpp  mavlink_read.cpp  mavlink_read.cpp.save  mover.cpp  mover.cpp.orig  plane.cpp  planeBuilder.cpp  planeObject.cpp  ripna.cpp  serial_talker.cpp  simPlaneObject.cpp  simulator.cpp  standardDefs.cpp  standardFuncs.cpp  test.cpp  vmath.cpp  xbeeIn.cpp  xbeeOut.cpp  xbee_talker.cpp
au_uav_ros/src/test/: clientSideIDTester.cpp  moverStateMachine.cpp  planeIDServiceTester.cpp  serverSideIDTester.cpp
au_uav_ros/srv/: planeIDGetter.srv
au_uav_ros/test/: ca_tester.cpp  mover_state_tester.test  planeIDClientTester.test  planeIDServerTester.test  planeIDServiceTester.test
